--- a/worker.ipynb
+++ b/worker.ipynb
@@ -7,8 +7,8 @@
    "outputs": [],
    "source": [
     "import datareader as topg\n",
-    "import K_means_Cluster as KM\n",
-    "import plot_maker as pp"
+    "import Cluster_KMeans as KM\n",
+    "import Plotter as pp"
    ]
   },
   {
