--- a/Tester.ipynb
+++ b/Tester.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1736538038.py, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\ashis\\AppData\\Local\\Temp\\ipykernel_22780\\1736538038.py\"\u001b[1;36m, line \u001b[1;32m5\u001b[0m\n\u001b[1;33m    import Working_Elements.Data_Processing.1D_Fourier_Transform as ONED\u001b[0m\n\u001b[1;37m                                           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\ashis\\anaconda3\\lib\\site-packages\\scipy\\__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.24.1\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
      ]
     }
    ],
@@ -18,17 +18,431 @@
     "import Working_Elements.datareader as topg\n",
     "import Clustering_Methods.Cluster_KMeans as KM\n",
     "import Working_Elements.Final_Plotter as pp\n",
-    "import Working_Elements.Initial_Plotter as bp\n",
-    "import Working_Elements.Data_Processing.1D_Fourier_Transform as ONED"
+    "#import Working_Elements.Initial_Plotter as bp\n",
+    "#import Working_Elements.Data_Processing.ONE\n",
+    "import Working_Elements.Data_Processing.ONED_Fourier_Transform as dd\n",
+    "#from Working_Elements.Data_Processing import ONED_Fourier_Transform as dd\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "data, original = topg.reader(r\"C:\\Users\\ashis\\Python Notebooks\\Task 2\\Data - 1 - TXT\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>502</th>\n",
+       "      <th>503</th>\n",
+       "      <th>504</th>\n",
+       "      <th>505</th>\n",
+       "      <th>506</th>\n",
+       "      <th>507</th>\n",
+       "      <th>508</th>\n",
+       "      <th>509</th>\n",
+       "      <th>510</th>\n",
+       "      <th>511</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507</th>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>508</th>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>509</th>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>510</th>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>511</th>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>512 rows × 512 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          0         1         2         3         4         5         6    \\\n",
+       "0    0.000001  0.000001  0.000001  0.000001  0.000001  0.000001  0.000001   \n",
+       "1    0.000001  0.000001  0.000001  0.000001  0.000001  0.000001  0.000001   \n",
+       "2    0.000001  0.000001  0.000001  0.000001  0.000001  0.000001  0.000001   \n",
+       "3    0.000001  0.000001  0.000001  0.000001  0.000001  0.000001  0.000001   \n",
+       "4    0.000001  0.000001  0.000001  0.000001  0.000001  0.000001  0.000001   \n",
+       "..        ...       ...       ...       ...       ...       ...       ...   \n",
+       "507  0.000001  0.000001  0.000001  0.000001  0.000001  0.000001  0.000001   \n",
+       "508  0.000001  0.000001  0.000001  0.000001  0.000001  0.000001  0.000001   \n",
+       "509  0.000001  0.000001  0.000001  0.000001  0.000001  0.000001  0.000001   \n",
+       "510  0.000001  0.000001  0.000001  0.000001  0.000001  0.000001  0.000001   \n",
+       "511  0.000001  0.000001  0.000001  0.000001  0.000001  0.000001  0.000001   \n",
+       "\n",
+       "          7         8         9    ...       502       503       504  \\\n",
+       "0    0.000001  0.000001  0.000001  ...  0.000002  0.000002  0.000002   \n",
+       "1    0.000001  0.000001  0.000001  ...  0.000002  0.000002  0.000002   \n",
+       "2    0.000001  0.000001  0.000001  ...  0.000002  0.000002  0.000002   \n",
+       "3    0.000001  0.000001  0.000001  ...  0.000002  0.000002  0.000002   \n",
+       "4    0.000001  0.000001  0.000001  ...  0.000002  0.000002  0.000002   \n",
+       "..        ...       ...       ...  ...       ...       ...       ...   \n",
+       "507  0.000001  0.000001  0.000001  ...  0.000002  0.000002  0.000002   \n",
+       "508  0.000001  0.000001  0.000001  ...  0.000001  0.000002  0.000002   \n",
+       "509  0.000001  0.000001  0.000001  ...  0.000001  0.000002  0.000002   \n",
+       "510  0.000001  0.000001  0.000001  ...  0.000001  0.000001  0.000002   \n",
+       "511  0.000001  0.000001  0.000001  ...  0.000001  0.000001  0.000001   \n",
+       "\n",
+       "          505       506       507       508       509       510       511  \n",
+       "0    0.000002  0.000002  0.000002  0.000002  0.000002  0.000002  0.000002  \n",
+       "1    0.000002  0.000002  0.000002  0.000002  0.000002  0.000002  0.000002  \n",
+       "2    0.000002  0.000002  0.000002  0.000002  0.000002  0.000002  0.000002  \n",
+       "3    0.000002  0.000002  0.000002  0.000002  0.000002  0.000002  0.000002  \n",
+       "4    0.000002  0.000002  0.000002  0.000002  0.000002  0.000002  0.000002  \n",
+       "..        ...       ...       ...       ...       ...       ...       ...  \n",
+       "507  0.000002  0.000002  0.000002  0.000002  0.000002  0.000002  0.000002  \n",
+       "508  0.000002  0.000002  0.000002  0.000002  0.000002  0.000002  0.000002  \n",
+       "509  0.000002  0.000002  0.000002  0.000002  0.000002  0.000002  0.000002  \n",
+       "510  0.000002  0.000002  0.000002  0.000002  0.000002  0.000002  0.000002  \n",
+       "511  0.000001  0.000002  0.000002  0.000002  0.000002  0.000002  0.000002  \n",
+       "\n",
+       "[512 rows x 512 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "original[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = np.random.rand(15, 257)\n",
+    "Y = np.random.rand(15, 257)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X[0] = (dd.mag_maker(original[0])[0])\n",
+    "Y[0] = (dd.mag_maker(original[0])[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'Working_Elements.Data_Processing.ONED_Fourier_Transform' has no attribute 'Process'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_24324\\1835732399.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mProcess\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moriginal\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'Working_Elements.Data_Processing.ONED_Fourier_Transform' has no attribute 'Process'"
+     ]
+    }
+   ],
+   "source": [
+    "dd.Process(original)"
    ]
   },
   {
