--- a/KMeans_DEMO.ipynb
+++ b/KMeans_DEMO.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -23,16 +23,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data, original = read_raw.reader(r\"C:\\Users\\ashis\\Python Notebooks\\Task 2\\Data - 1 - TXT\")"
+    "data, original = read_raw.reader(r\"C:\\Users\\ashis\\Python Notebooks\\Task 2\\Data - 1 - TXT\")\n",
+    "\n",
+    "# data: stores individual sample in the format of 1 Dimensional numpy array (e.g. [0,1,2,3,1,2,2,3,1,3,.... N*N])\n",
+    "# original: stores the actual data from the sample in the dimension as is (e.g. [256,256] in csv,txt etc formats)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -47,12 +50,13 @@
     }
    ],
    "source": [
-    "initial.plotter(original)"
+    "initial.plotter(original) \n",
+    "# Plotting the original data "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +69,8 @@
     }
    ],
    "source": [
-    "result = KM.K_MEANS(data,3)"
+    "result = KM.K_MEANS(data,3)\n",
+    "# For Kmeans function, Data in 1 Dimensional format is given as input and the number of clusters required is given as a Parameter function"
    ]
   },
   {
@@ -105,8 +110,16 @@
     }
    ],
    "source": [
-    "final.plotter(result,original)"
+    "final.plotter(result,original)\n",
+    "# plotting the final results using the clustering result stored in \"RESULTS\" & \"original\" data from reading the actual data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
